tdf#93664 sc: fix the filter list of the merged cells

Show in the merged cells the filter of the first cell.

Before this fix the filter button was for the last
column in the merged range and the filter list only
showed the "Empty" entry.

Regression from commit: aaab3a79dfd762a64fa4c1d19dd29ae46c0b9dd0
(Resolves: #i120017, filter button is not shown in merged cell)

Change-Id: I83724f18580134868867bc829cad0739f0932733